compiler/test/parse-err/ewise-different-semirings.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func EwiseDifferentSemirings(
    // expected-note@below{{left operand has semiring int}}
    a: Matrix<s, s, int>,
    // expected-note@below{{right operand has semiring real}}
    b: Matrix<s, s, real>) -> Matrix<s, s, int> {
    // Element-wise operations require operands to have the same semiring
    // expected-error@below{{element-wise operation requires operands to have the same semiring}}
    return a (.+) b;
}
